2005-04-09  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_ext.c:
	Implement XCBPrefetchExtensionData. An extension can now be in
	one of three states in a particular connection's cache: not
	queried; query cookie available; and query reply available.

2005-04-09  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_ext.c, src/xcbint.h:
	Assign a display-independent unique integer to each XCBExtension
	structure. Use a map instead of a list for the extension cache.
	Key the map on the assigned integer.

2005-04-06  Jeremy Kolb  <jkolb@brandeis.edu>

	* src/c-client.xsl:
	Added support for c types float and double.
	Needed for GLX extension.

2005-04-02  Jamey Sharp  <jamey@minilop.net>

	* src/c-client.xsl:
	Workaround for XSLT processors that can't understand attribute
	values of the form '{{ "{...}" }}'. (What? That looks completely
	clear to me. *grin*)

2005-04-01  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_list.c:
	Make the _destroy operations no-op on null pointers.

2005-03-31  Jamey Sharp  <jamey@minilop.net>

	* src/xcb.h, src/xcb_conn.c, src/xcb_out.c, src/xcbint.h:
	Lazily check for BIG-REQUESTS support. The first call to
	XCBGetMaximumRequestLength takes the two-round-trip penalty for
	discovering BIG-REQUESTS support, and caches the result for
	subsequent calls. Also XCBSendRequest is now careful to only ask
	for the true maximum request length if the length from the
	connection setup data isn't sufficient for the current request.

2005-03-31  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c:
	Fix X error handling to, uh, not hang.

2005-03-30  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c, src/xcbint.h:
	Accept zero or more replies to any request. Eliminates, for the
	moment, nearly all run-time error checking regarding the number
	of replies expected for a particular request. Also breaks the
	unexpected reply callback, which is OK because I was going to
	remove it anyway, and now I've done so.

2005-03-30  Jamey Sharp  <jamey@minilop.net>
